<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_all_guests">Todos os convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="text_user_name">Nome</string>
    <string name="text_is_present">Presença</string>
    <string name="present">Presente</string>
    <string name="absent">Ausente</string>
    <string name="save_guest_form">Salvar</string>


</resources>